@@ -389,7 +389,10 @@
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                         --add-opens java.base/java.nio=ALL-UNNAMED
-                        --add-exports java.base/sun.nio.cs=ALL-UNNAMED                 
+                        --add-exports java.base/sun.nio.cs=ALL-UNNAMED          
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED  
                     </argLine>
                     <classpathDependencyExcludes>
                         <classpathDependencyExclude>org.wso2.org.ops4j.pax.logging</classpathDependencyExclude>
@@ -478,7 +481,7 @@
                             org.wso2.carbon.apimgt.api.*; version="${carbon.apimgt.imp.pkg.version}",
                             edu.emory.mathcs.backport.*,
                             org.apache.axis2.*; version="${imp.pkg.version.axis2}",
-                            javax.activation.*; version="[0.0.0, 1.0.0)",
+                            javax.activation.*; version="[0.0.0, 1.0.0)"; resolution:=optional,
                             javax.cache,
                             javax.net.ssl,
                             javax.xml.namespace,
@@ -518,6 +521,11 @@
                             javax.annotation;version=0.0.0;resolution:=optional,
                             *;resolution:=optional
                         </Import-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.api.GuardrailProviderService,
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.api.EmbeddingProviderService,
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.api.VectorDBProviderService
+                        </Provide-Capability>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
